<resources>
    <string name="app_name">My Apps</string>
    <string name="register_title">Register !!</string>
    <string name="register_success_message">You have been successfully Registered. Logon with your login and password !!</string>
    <string name="lbl_name">Name : </string>
    <string name="hint_name">Enter your Name</string>
    <string name="lbl_mail">Mail : </string>
    <string name="hint_firstName">Enter first name</string>
    <string name="lbl_firstName">First Name : </string>
    <string name="lbl_password">Password : </string>
    <string name="hint_password">Enter Password</string>
    <string name="lbl_phone">Phone : </string>
    <string name="hint_phone">Enter Phone number</string>
    <string name="lbl_btnRegister">Register</string>
    <string name="error_name">Enter name</string>
    <string name="error_firstname">Enter first name</string>
    <string name="error_mail">Enter valid mail</string>
    <string name="error_phone">Enter valid Phone.</string>
    <string name="error_login">Enter valid login</string>
    <string name="error_password">Enter valid password</string>
    <string name="login_title">Login Apps</string>
    <string name="hint_mail">Enter your Email</string>
    <string name="lblLogin">Login</string>
    <string name="lblRegister">Register</string>
    <string name="error_enter_password">Enter valid password</string>
    <string name="error_server_500">Internal Server Error. Try later.</string>
    <string name="error_bad_request">Bad request error.</string>
    <string name="unexpected_error_server">Unexpected Server Error. Try later.</string>
    <string name="album_name">CameraSample</string>
    <string name="lblLogout">Logout</string>
    <string name="lblCreateAdvice">Create advice</string>
    <string name="lblUpdateAdvice">Update Advice</string>
    <string name="lblDeleteAdvice">Delete advice</string>
    <string name="lblProfile">My Profil</string>
    <string name="btnIntend">Take picture</string>
    <string name="lbl_advert_title">Title : </string>
    <string name="hint_advert_title">Enter title</string>
    <string name="error_advert_title">Enter title</string>
    <string name="lbl_advert_description">Description :</string>
    <string name="hint_advert_description">Enter description of your advertDTO</string>
    <string name="error_advert_description">Enter description</string>
    <string name="lbl_advert_price">Price :</string>
    <string name="hint_advert_price">Enter price</string>
    <string name="error_advert_price">Enter price</string>
    <string name="lbl_advert_publish_advert">Publish</string>
    <string name="lbl_advert_cancel">Cancel</string>
    <string name="advert_cancel_dialog_title">Cancel advertDTO</string>
    <string name="advert_cancel_dialog_message">You will lose all input datas</string>
    <string name="lbl_btn_yes">Yes</string>
    <string name="lbl_btn_no">No</string>
    <string name="btnTakePhoto">Take a Photo</string>
</resources>
