<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btnCreateAdvice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/lblCreateAdvice"
        android:textAllCaps="false"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnUpdateAdvice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/lblUpdateAdvice"
        android:textAllCaps="false"
        android:textSize="15dp" />


    <Button
        android:id="@+id/btnDeleteAdvice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/lblDeleteAdvice"
        android:textAllCaps="false"
        android:textSize="15dp" />


    <Button
        android:id="@+id/btnProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/lblProfile"
        android:textAllCaps="false"
        android:textSize="15dp" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:text="@string/lblLogout"
        android:textAllCaps="false"
        android:textSize="15dp" />

</LinearLayout>
